--- a/src/ru/gurps/generator/resources/views/feature_full.fxml
+++ b/src/ru/gurps/generator/resources/views/feature_full.fxml
@@ -9,25 +9,17 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="511.0" prefWidth="674.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
+      <Label layoutX="14.0" layoutY="98.0" text="Описание" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="98.0" />
       <Label fx:id="name" alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="574.0" text="name" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="cost" layoutX="14.0" layoutY="57.0" prefHeight="15.0" prefWidth="78.0" text="cost" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="57.0" />
-      <Label fx:id="type" layoutX="92.0" layoutY="57.0" prefHeight="15.0" prefWidth="105.0" text="type" AnchorPane.leftAnchor="92.0" AnchorPane.topAnchor="57.0" />
-      <Hyperlink fx:id="description" focusTraversable="false" layoutX="14.0" layoutY="91.0" prefHeight="23.0" prefWidth="105.0" text="Описание" visited="true" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="91.0" />
-      <TextFlow layoutY="114.0" prefHeight="243.0" prefWidth="674.0" AnchorPane.bottomAnchor="154.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="114.0" />
-      <Hyperlink fx:id="addons" focusTraversable="false" layoutX="12.0" layoutY="354.0" prefHeight="23.0" prefWidth="105.0" text="Дополнения" visited="true" AnchorPane.leftAnchor="12.0" />
-      <TableView layoutY="377.0" prefHeight="132.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-        <columns>
-          <TableColumn prefWidth="79.0" text="Добавить" />
-          <TableColumn prefWidth="82.0" text="Название" />
-            <TableColumn prefWidth="118.0" text="Название Англ" />
-            <TableColumn prefWidth="78.0" text="Уровень" />
-            <TableColumn prefWidth="105.0" text="Стоимость %" />
-            <TableColumn maxWidth="1.7976931348623157E308" prefWidth="211.0" text="Описание" />
-        </columns>
-      </TableView>
+      <Label fx:id="cost" layoutX="14.0" layoutY="57.0" prefHeight="16.0" prefWidth="144.0" text="cost" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="57.0" />
+      <Label fx:id="type" alignment="CENTER_RIGHT" layoutX="563.0" layoutY="57.0" prefHeight="16.0" prefWidth="144.0" text="type" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="57.0" />
+      <TextFlow layoutY="114.0" prefHeight="399.0" prefWidth="674.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="114.0">
+         <children>
+            <Text fx:id="fullDescription" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="489.6829261779785" />
+         </children></TextFlow>
    </children>
 </AnchorPane>
