--- a/src/ru/gurps/generator/resources/views/disadvantage.fxml
+++ b/src/ru/gurps/generator/resources/views/disadvantage.fxml
@@ -25,6 +25,7 @@
                 <Label fx:id="lvlLabel" layoutX="323.0" layoutY="11.0" prefHeight="15.0" prefWidth="131.0" text="Уровень " AnchorPane.bottomAnchor="74.0" AnchorPane.rightAnchor="191.0" />
                 <TextField fx:id="lvlText" layoutX="390.0" layoutY="6.0" prefHeight="25.0" prefWidth="62.0" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="193.0" />
                 <Button fx:id="add" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Добавить" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="10.0" />
+                <Button fx:id="remove" layoutX="541.0" layoutY="39.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Удалить" visible="false" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="10.0" />
                 <Button fx:id="full" layoutX="550.0" layoutY="31.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Подробнее" AnchorPane.bottomAnchor="33.0" AnchorPane.rightAnchor="10.0" />
                 <Label layoutX="459.0" layoutY="6.0" text="Стоимость" AnchorPane.bottomAnchor="79.0" AnchorPane.rightAnchor="118.0" />
                 <Label fx:id="finalCost" alignment="CENTER" layoutX="459.0" layoutY="27.0" prefHeight="41.0" prefWidth="74.0" text="0" AnchorPane.bottomAnchor="33.0" AnchorPane.rightAnchor="118.0">
