--- a/src/ru/gurps/generator/resources/views/main.fxml
+++ b/src/ru/gurps/generator/resources/views/main.fxml
@@ -114,19 +114,16 @@
                              <!-- bottomMenu -->
                              <AnchorPane fx:id="advantagesBottomMenu" layoutY="300.0" prefHeight="134.0" prefWidth="645.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                                  <children>
-                                     <Slider fx:id="advantagesLvlSlider" blockIncrement="1.0" layoutX="323.0" layoutY="39.0" majorTickUnit="99.0" min="1.0" minorTickCount="100" showTickLabels="true" snapToTicks="true" value="1.0" AnchorPane.bottomAnchor="29.0" AnchorPane.rightAnchor="182.0" />
-                                     <Label fx:id="advantagesLvlLabel" layoutX="323.0" layoutY="11.0" prefHeight="15.0" prefWidth="131.0" text="Уровень " AnchorPane.bottomAnchor="74.0" AnchorPane.rightAnchor="191.0" />
-                                     <TextField fx:id="advantagesLvlText" layoutX="390.0" layoutY="6.0" prefHeight="25.0" prefWidth="62.0" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="193.0" />
+                                     <ComboBox fx:id="advantagesLvlComboBox" layoutX="323.0" layoutY="27.0" value="1.0" AnchorPane.bottomAnchor="29.0" AnchorPane.rightAnchor="182.0" />
+                                     <Label fx:id="advantagesLvlLabel" layoutX="323.0" layoutY="11.0" text="Уровень " AnchorPane.bottomAnchor="89.0" AnchorPane.rightAnchor="191.0" />
+                                     <TextField fx:id="advantagesLvlText" layoutX="390.0" layoutY="6.0" prefHeight="25.0" prefWidth="62.0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="193.0" />
                                      <Button fx:id="advantagesAdd" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Добавить" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="10.0" />
                                      <Button fx:id="advantagesRemove" layoutX="541.0" layoutY="39.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Удалить" visible="false" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="10.0" />
                                      <Button fx:id="advantagesFull" layoutX="550.0" layoutY="31.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Подробнее" AnchorPane.bottomAnchor="33.0" AnchorPane.rightAnchor="10.0" />
-                                     <Label layoutX="459.0" layoutY="6.0" text="Стоимость" AnchorPane.bottomAnchor="79.0" AnchorPane.rightAnchor="118.0" />
-                                     <Label fx:id="advantagesFinalCost" alignment="CENTER" layoutX="459.0" layoutY="27.0" prefHeight="41.0" prefWidth="74.0" text="0" AnchorPane.bottomAnchor="33.0" AnchorPane.rightAnchor="118.0">
-                                     <TextField fx:id="advantagesFinalCostText" alignment="CENTER" layoutX="459.0" layoutY="27.0" prefHeight="41.0" prefWidth="74.0" AnchorPane.bottomAnchor="33.0" AnchorPane.rightAnchor="118.0" />
-                                         <font>
-                                             <Font size="18.0" />
-                                         </font>
-                                     </Label>
+                                     <Label layoutX="459.0" layoutY="6.0" text="Стоимость" AnchorPane.bottomAnchor="89.0" AnchorPane.rightAnchor="118.0" />
+                                     <Label fx:id="advantagesFinalCost" alignment="CENTER" layoutX="459.0" layoutY="27.0" prefHeight="25.0" prefWidth="62.0" text="0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="116.0" />
+                                     <TextField fx:id="advantagesFinalCostText" layoutX="459.0" layoutY="27.0" prefHeight="25.0" prefWidth="62.0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="116.0" />
+
                                      <TableView fx:id="advantagesAddonsTableView" layoutX="-2.0" prefHeight="111.0" prefWidth="320.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="325.0" AnchorPane.topAnchor="0.0">
                                          <columns>
                                              <TableColumn fx:id="advantagesActivate" prefWidth="46.0" text="Добавить" />
@@ -159,19 +156,16 @@
                              <!-- bottomMenu -->
                              <AnchorPane fx:id="disadvantagesBottomMenu" layoutY="300.0" prefHeight="134.0" prefWidth="645.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                                  <children>
-                                     <Slider fx:id="disadvantagesLvlSlider" blockIncrement="1.0" layoutX="323.0" layoutY="39.0" majorTickUnit="99.0" min="1.0" minorTickCount="100" showTickLabels="true" snapToTicks="true" value="1.0" AnchorPane.bottomAnchor="29.0" AnchorPane.rightAnchor="182.0" />
-                                     <Label fx:id="disadvantagesLvlLabel" layoutX="323.0" layoutY="11.0" prefHeight="15.0" prefWidth="131.0" text="Уровень " AnchorPane.bottomAnchor="74.0" AnchorPane.rightAnchor="191.0" />
-                                     <TextField fx:id="disadvantagesLvlText" layoutX="390.0" layoutY="6.0" prefHeight="25.0" prefWidth="62.0" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="193.0" />
+                                     <ComboBox fx:id="disadvantagesLvlComboBox" layoutX="323.0" layoutY="27.0" value="1.0" AnchorPane.bottomAnchor="29.0" AnchorPane.rightAnchor="182.0" />
+                                     <Label fx:id="disadvantagesLvlLabel" layoutX="323.0" layoutY="11.0" text="Уровень " AnchorPane.bottomAnchor="89.0" AnchorPane.rightAnchor="191.0" />
+                                     <TextField fx:id="disadvantagesLvlText" layoutX="390.0" layoutY="6.0" prefHeight="25.0" prefWidth="62.0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="193.0" />
                                      <Button fx:id="disadvantagesAdd" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Добавить" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="10.0" />
                                      <Button fx:id="disadvantagesRemove" layoutX="541.0" layoutY="39.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Удалить" visible="false" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="10.0" />
                                      <Button fx:id="disadvantagesFull" layoutX="550.0" layoutY="31.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Подробнее" AnchorPane.bottomAnchor="33.0" AnchorPane.rightAnchor="10.0" />
-                                     <Label layoutX="459.0" layoutY="6.0" text="Стоимость" AnchorPane.bottomAnchor="79.0" AnchorPane.rightAnchor="118.0" />
-                                     <Label fx:id="disadvantagesFinalCost" alignment="CENTER" layoutX="459.0" layoutY="27.0" prefHeight="41.0" prefWidth="74.0" text="0" AnchorPane.bottomAnchor="33.0" AnchorPane.rightAnchor="118.0">
-                                     <TextField fx:id="disadvantagesFinalCostText" alignment="CENTER" layoutX="459.0" layoutY="27.0" prefHeight="41.0" prefWidth="74.0" AnchorPane.bottomAnchor="33.0" AnchorPane.rightAnchor="118.0" />
-                                         <font>
-                                             <Font size="18.0" />
-                                         </font>
-                                     </Label>
+                                     <Label layoutX="459.0" layoutY="6.0" text="Стоимость" AnchorPane.bottomAnchor="89.0" AnchorPane.rightAnchor="118.0" />
+                                     <Label fx:id="disadvantagesFinalCost" alignment="CENTER" layoutX="459.0" layoutY="27.0" prefHeight="25.0" prefWidth="62.0" text="0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="116.0" />
+                                     <TextField fx:id="disadvantagesFinalCostText" layoutX="459.0" layoutY="27.0" prefHeight="25.0" prefWidth="62.0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="116.0" />
+                                     
                                      <TableView fx:id="disadvantagesAddonsTableView" layoutX="-2.0" prefHeight="111.0" prefWidth="320.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="325.0" AnchorPane.topAnchor="0.0">
                                          <columns>
                                              <TableColumn fx:id="disadvantagesActivate" prefWidth="46.0" text="Добавить" />
@@ -209,6 +203,5 @@
            <Label fx:id="currentPoints" alignment="CENTER" layoutX="580.0" layoutY="85.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="39.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="85.0" />
            <Label layoutX="294.0" layoutY="90.0" prefHeight="26.0" text="Максимум очков" AnchorPane.rightAnchor="242.0" AnchorPane.topAnchor="85.0" />
            <TextField fx:id="maxPoints" alignment="CENTER" layoutX="410.0" layoutY="90.0" prefHeight="26.0" prefWidth="39.0" AnchorPane.rightAnchor="192.0" AnchorPane.topAnchor="85.0" />
-      <!--<Label fx:id="user" layoutX="200.0" layoutY="28.0" text="Label" visible="false" />-->
    </children>
 </AnchorPane>
