--- a/src/ru/gurps/generator/resources/views/userSheet.fxml
+++ b/src/ru/gurps/generator/resources/views/userSheet.fxml
@@ -110,11 +110,11 @@
                         <TextField fx:id="age" layoutX="479.0" layoutY="46.0" prefHeight="26.0" prefWidth="38.0" />
                         <Label fx:id="remainingPoints" layoutX="654.0" layoutY="51.0" text="9999" />
                         <Label layoutX="535.0" layoutY="51.0" text="Осталось очков" />
-                        <TableView  fx:id="languagesTableView" layoutX="232.0" layoutY="85.0" prefHeight="126.0" prefWidth="462.0">
+                        <TableView fx:id="languagesTableView" layoutX="232.0" layoutY="85.0" prefHeight="126.0" prefWidth="462.0">
                             <columns>
                                 <TableColumn prefWidth="75.0" text="Языки">
                                     <columns>
-                                        <TableColumn fx:id="languageColumn" prefWidth="184.0" text="Язык" />
+                                        <TableColumn fx:id="languageNameColumn" prefWidth="184.0" text="Язык" />
                                         <TableColumn fx:id="spokenColumn" minWidth="0.0" prefWidth="107.0" text="Разговор" />
                                         <TableColumn fx:id="writtenColumn" minWidth="0.0" prefWidth="88.0" text="Письмо" />
                                         <TableColumn fx:id="languageCostColumn" minWidth="0.0" prefWidth="81.0" text="Стоимость" />
@@ -168,7 +168,7 @@
                         <TextField fx:id="tlCost" layoutX="642.0" layoutY="212.0" prefHeight="26.0" prefWidth="54.0" />
                         <TableView fx:id="culturasTableView" layoutX="455.0" layoutY="238.0" prefHeight="84.0" prefWidth="243.0">
                             <columns>
-                                <TableColumn fx:id="culturaColumn" prefWidth="159.0" text="Культура" />
+                                <TableColumn fx:id="culturaNameColumn" prefWidth="159.0" text="Культура" />
                                 <TableColumn fx:id="culturaCostColumn" prefWidth="83.0" text="Стоимость" />
                             </columns>
                         </TableView>
@@ -183,14 +183,14 @@
                                 <Font name="System Bold" size="13.0" />
                             </font>
                         </Label>
-                        <Label layoutX="106.0" layoutY="264.0" text="Пр ">
+                        <Label layoutX="127.0" layoutY="264.0" text="Пр ">
                             <font>
                                 <Font name="System Italic" size="13.0" />
                             </font>
                         </Label>
-                        <Label fx:id="thrust" contentDisplay="CENTER" layoutX="127.0" layoutY="264.0" prefHeight="16.0" prefWidth="30.0" text="9999" />
-                        <Label fx:id="swing" contentDisplay="CENTER" layoutX="187.0" layoutY="264.0" prefHeight="16.0" prefWidth="30.0" text="9999" />
-                        <Label layoutX="167.0" layoutY="264.0" text="Ам ">
+                        <Label fx:id="thrust" contentDisplay="CENTER" layoutX="151.0" layoutY="264.0" prefHeight="16.0" prefWidth="65.0" text="9999" />
+                        <Label fx:id="swing" contentDisplay="CENTER" layoutX="151.0" layoutY="282.0" prefHeight="16.0" prefWidth="65.0" text="9999" />
+                        <Label layoutX="129.0" layoutY="282.0" text="Ам ">
                             <font>
                                 <Font name="System Italic" size="13.0" />
                             </font>
