--- a/src/ru/gurps/generator/resources/views/main.fxml
+++ b/src/ru/gurps/generator/resources/views/main.fxml
@@ -47,7 +47,7 @@
                <MenuItem mnemonicParsing="false" text="Преимущества" />
            </items>
        </MenuButton>
-       <TabPane layoutX="-3.0" layoutY="125.0" prefHeight="99.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-3.0" AnchorPane.rightAnchor="-4.0" AnchorPane.topAnchor="125.0">
+       <TabPane layoutX="-3.0" layoutY="125.0" prefHeight="99.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="125.0">
           <tabs>
               <Tab fx:id="tParams" text="Основные параметры">
                  <content>
@@ -173,7 +173,7 @@
                  <content>
                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="399.0" prefWidth="645.0">
                          <children>
-                             <TableView fx:id="disadvantagesView" layoutY="28.0" prefHeight="384.0" prefWidth="657.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="28.0">
+                             <TableView fx:id="disadvantagesView" layoutY="56.0" prefHeight="407.0" prefWidth="650.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="58.0">
                                  <columns>
                                      <TableColumn fx:id="disadvantagesTitle" prefWidth="136.0" text="Название" />
                                      <TableColumn fx:id="disadvantagesTitleEn" prefWidth="125.0" text="Название англ." />
@@ -250,11 +250,37 @@
                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                  </content>
               </Tab>
-              <Tab text="Снаряжения">
+              <Tab text="Языки">
                  <content>
-                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TableView fx:id="languagesTableView" prefHeight="415.0" prefWidth="657.0" AnchorPane.bottomAnchor="48.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <columns>
+                            <TableColumn fx:id="languagesNameColumn" prefWidth="169.0" text="Язык" />
+                            <TableColumn fx:id="languageSpokenColumn" minWidth="0.0" prefWidth="111.0" text="Разговор" />
+                              <TableColumn fx:id="languagesWrittenColumn" prefWidth="92.0" text="Письмо" />
+                              <TableColumn fx:id="languagesCostColumn" prefWidth="94.0" text="Стоимость" />
+                              <TableColumn fx:id="languagesUserColumn" prefWidth="92.0" text="Персонаж" />
+                              <TableColumn fx:id="languagesDbColumn" prefWidth="98.0" text="База" />
+                          </columns>
+                        </TableView>
+                        <Label alignment="CENTER" layoutX="7.0" layoutY="415.0" prefHeight="16.0" prefWidth="125.0" text="Язык" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="5.0" />
+                        <TextField fx:id="languageNameText" layoutY="431.0" prefHeight="26.0" prefWidth="124.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="5.0" />
+                        <ChoiceBox fx:id="languageSpokenChoiceBox" layoutX="138.0" layoutY="431.0" prefWidth="150.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="138.0" />
+                        <Label alignment="CENTER" layoutX="139.0" layoutY="415.0" prefHeight="16.0" prefWidth="149.0" text="Разговор" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="139.0" />
+                        <ChoiceBox fx:id="languageWrittenChoiceBox" layoutX="299.0" layoutY="431.0" prefWidth="150.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="299.0" />
+                        <Label alignment="CENTER" layoutX="300.0" layoutY="415.0" prefHeight="16.0" prefWidth="149.0" text="Письмо" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="300.0" />
+                        <Button fx:id="languageAddButton" layoutX="558.0" layoutY="431.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" text="Добавить" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="558.0" />
+                        <TextField fx:id="languageCostText" layoutX="457.0" layoutY="431.0" prefHeight="26.0" prefWidth="80.0" text="0" />
+                        <Label alignment="CENTER" layoutX="457.0" layoutY="415.0" prefHeight="16.0" prefWidth="80.0" text="Стоимость" />
+                     </children></AnchorPane>
                  </content>
               </Tab>
+            <Tab text="Снаряжения">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+               </content>
+            </Tab>
           </tabs>
        </TabPane>
            <Label layoutX="471.0" layoutY="97.0" prefHeight="26.0" prefWidth="115.0" text="Затрачено очков" AnchorPane.rightAnchor="64.0" AnchorPane.topAnchor="97.0" />
